# vim: set noexpandtab:

2012-07-03 Steve
	* Adding additional isolation variables
		* ptcone30
		* etcone30Corr
		* etcone30TopoCorr
			-> Requires a regeneration of MultiLep/ElectronD3PDObject, we don't have ED_median branch yet

2012-06-29 Steve
	* Updated submission scripts
		* They now use a common blacklist file
	* Code has been tested against latest MultiLep changes
		* Now uses SUSYTools-00-01-00
		* Updated photon branches/selection
	* Tagging SusyCommon-00-00-14

2012-06-27 Steve
	* Changed default lumi to 5312
		* Based on current GRLs. This will be updated again soon.
	* Update grid submission scripts
	* Tagging SusyCommon-00-00-13

2012-06-25 Steve
	* Added missing trigger: mu18_tight_mu8_EFFS
	* Tagging SusyCommon-00-00-12

2012-06-24 Steve
	* Added single lepton trigger matching for our dilepton triggers
	* This way we have more flexibility to implement the best logic later
	* Added event trigger flags to SusyD3PDAna and SusyNtMaker
	* Changed jet/met calibration to RefFinal (LC jets)
	* Updated submission scripts and sample lists
		* New dataSamples with data12 containers
		* New SusyNt DS naming convention by request
		* Added single top tchan samples
	* Tagging SusyCommon-00-00-11

2012-06-23 Steve
	* Updated the pileup file usage and lumi
	* Update mcSamples
	* Tagging SusyCommon-00-00-10

2012-06-22 Steve
	* Updated to latest MultiLep usage
	* Now includes switch for controlling the jet/met calibration: m_metCalib
		* For now I'm leaving it as Simplified20 (EMJES), but will switch soon
	* Added SV0 and MV1 b-taggers to SusyNtMaker
	* Fixed/updated to latest SUSY GRL
	* Added 2nd pileup tool for A-B5 unblinded region
	* Added available 2012 triggers

2012-06-21 Matt
	* Added Photon methods to SusyD3PDAna and SusyNtMaker to load and save.
	* Flag for saving: -savePh (default is false)
	* Class now depends on PhotonTools and PhotonD3PDObject

2012-06-20 Steve
	* Updated to twentyinvfb version of MultiLep, and SUSYTools v71