@@ -300,11 +300,15 @@ void SusyD3PDAna::selectSignalPhotons()
   if(m_dbg) cout << "selectSignalPhotons" << endl;
 
   int phoQual = 2;      // Quality::Tight
+  uint isoType = 1;     // Corresponds to PTED corrected isolation 
   float etcone40CorrCut = 3*GeV; 
   vector<int> base_photons = get_photons_baseline(&d3pd.pho, !m_isMC, d3pd.evt.RunNumber(), m_susyObj, 
                                                   20.*GeV, 2.47, SystErr::NONE, phoQual);
 
-  m_sigPhotons = get_photons_signal(&d3pd.pho, base_photons, m_susyObj, 20.*GeV, etcone40CorrCut, !m_isMC);
+
+  int nPV = getNumGoodVtx();
+  m_sigPhotons = get_photons_signal(&d3pd.pho, base_photons, m_susyObj, nPV, !m_isMC, 20.*GeV, etcone40CorrCut, isoType);
+
 }
 
 /*--------------------------------------------------------------------------------*/
